--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "vite": "^5.0.8"
   },
   "dependencies": {
+    "@sveltejs/svelte-scroller": "^2.0.7",
     "@types/d3": "^7.4.3",
     "d3": "^7.8.5",
-    "@sveltejs/svelte-scroller": "^2.0.7",
-    "scrolly-video": "^0.0.23"
+    "scrolly-video": "^0.0.23",
+    "svelte-routing": "^2.13.0"
   }
 }
